Fixed stack overflow in scripts.js

--- a/static/styles.css
+++ b/static/styles.css
@@ -20,3 +20,7 @@ textarea {
 textarea {
     height: 250px;
 }
+
+button {
+    width: 100%;
+}
